# sql_similator

./: .gitignore  Dockerfile  README.md  client.py  inference.py  openenv.yaml  out_hf.txt  out_origin.txt  push_out.txt  push_out2.txt  pyproject.toml  requirements.txt
app/: server.py
core/: __init__.py  config.py  models.py
env/: __init__.py  sql_environment.py
graders/: __init__.py  reward.py
server/: app.py
tasks/: __init__.py  task_definitions.py
